--- a/nursing-homes-texas/styles/styles.css
+++ b/nursing-homes-texas/styles/styles.css
@@ -73,11 +73,11 @@ h1.headline {
     line-height: 1.1;
     margin-bottom: 0.25rem;
     margin-top: 1rem;
-    font-weight: 800;
+    font-weight: 770;
 }
 
 h2.subhead {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     line-height: 2rem;
     margin-bottom:0;
     margin-top: 15px;
@@ -150,6 +150,7 @@ p.note {
 	display: block;
 	margin-top:20px;
 	width: 100%;
+	padding-left: 300px
 }
 p.chart-title {
 	font-size:1.3rem;
@@ -185,6 +186,7 @@ p.chart-source {
 	display:block;
 	margin-top:20px;
 	padding-right: 100px;
+	padding-bottom: 30px;
 	width: 70%;
 }
 
@@ -196,6 +198,14 @@ p.chart-source {
 }
 .chart img {
 	width:80%;
+}
+
+.chart-row3 {
+	display:block;
+	margin-top:20px;
+	padding-right: 100px;
+	padding-bottom: 30px;
+	width: 70%;
 }
 
 
