--- a/nursing-homes-texas/styles/styles.css
+++ b/nursing-homes-texas/styles/styles.css
@@ -69,7 +69,7 @@ p.kicker {
 }
 
 h1.headline {
-    font-size: 4rem;
+    font-size: 3rem;
     line-height: 1.1;
     margin-bottom: 0.25rem;
     margin-top: 1rem;
@@ -77,15 +77,15 @@ h1.headline {
 }
 
 h2.subhead {
-    font-size: 1.3rem;
-    line-height: 2rem;
+    font-size: 1rem;
+    line-height: 1.4rem;
     margin-bottom:0;
     margin-top: 15px;
     font-weight: 400;
 }
 
 p.body-text {
-    font-size: 1.1rem;
+    font-size: 0.95rem;
     line-height: 1.4;
  	margin-top:0;
  	margin-bottom:15px;
@@ -129,7 +129,7 @@ p.note {
 
 .story-body .chart-section {
 	padding-top:15px;
-	width: 100%;
+	width: 90%;
 }
 
 
@@ -147,11 +147,12 @@ p.note {
 }
 
 .chart-section1 {
-	display: block;
-	margin-top:20px;
-	width: 100%;
-	padding-left: 300px
+	width:100%;
+	max-width:1100px;
+	padding:10px 10px;
+	padding-left:350px;
 }
+
 p.chart-title {
 	font-size:1.3rem;
 	font-weight:700;
@@ -193,8 +194,9 @@ p.chart-source {
 .chart-section2 {
 	display: block;
 	margin-top:20px;
-	width: 200%;
-	padding-right: 100px;
+	padding-left: 20px;
+	width: 170%;
+	/* padding-right: 100px; */
 }
 .chart img {
 	width:80%;
