--- a/connecticut-opioid-deaths/styles/styles.css
+++ b/connecticut-opioid-deaths/styles/styles.css
@@ -69,7 +69,7 @@ p.kicker {
 }
 
 h1.headline {
-    font-size: 4rem;
+    font-size: 3rem;
     line-height: 1.1;
     margin-bottom: 0.25rem;
     margin-top: 1rem;
@@ -77,36 +77,36 @@ h1.headline {
 }
 
 h2.subhead {
-    font-size: 1.4rem;
-    line-height: 2rem;
+    font-size: 1rem;
+    line-height: 1.4rem;
     margin-bottom:0;
     margin-top: 15px;
     font-weight: 400;
 }
 
 p.body-text {
-    font-size: 1.1rem;
+    font-size: 0.95rem;
     line-height: 1.4;
  	margin-top:0;
  	margin-bottom:15px;
 }
 
 h3.section-head {
-	font-size:2rem;
+	font-size:1.5rem;
 	margin:40px 0 10px 0;
 	font-weight:700;
 	line-height:1.3;
 }
 
 .byline {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     line-height: 0.75;
     margin-top: 1.5rem;
     font-weight: 500;
 }
 
 .date {
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     line-height: 1;
     margin-top: 10px;
     font-weight:400;
@@ -124,7 +124,7 @@ p.note {
 .chart-section {
 	width:100%;
 	max-width:1000px;
-	padding:20px 0px;
+	padding:10px 0px;
 }
 
 .story-body .chart-section {
@@ -135,7 +135,7 @@ p.note {
 .chart-row {
 	display:flex;
 	justify-content: space-between;
-	margin-top:20px;
+	/* margin-top:20px; */
 }
 
 p.chart-title {
@@ -174,6 +174,10 @@ p.chart-source {
 
 .chart img {
 	width:100%;
+}
+
+.chart2 img {
+	width:110%;
 }
 
 
