--- a/connecticut-opioid-deaths/styles/styles.css
+++ b/connecticut-opioid-deaths/styles/styles.css
@@ -93,7 +93,7 @@ p.body-text {
 
 h3.section-head {
 	font-size:1.5rem;
-	margin:40px 0 10px 0;
+	margin:10px 0 10px 0;
 	font-weight:700;
 	line-height:1.3;
 }
@@ -124,18 +124,20 @@ p.note {
 .chart-section {
 	width:100%;
 	max-width:1000px;
-	padding:10px 0px;
+	padding:0px 0px;
 }
 
 .story-body .chart-section {
-	padding-top:0px;
+	padding-top:10px;
+	padding-bottom:20px;
 }
 
 
 .chart-row {
 	display:flex;
 	justify-content: space-between;
-	/* margin-top:20px; */
+	margin-top:10px;
+	margin-bottom:20px;
 }
 
 p.chart-title {
@@ -161,8 +163,14 @@ p.chart-label {
 .chart-row .chart {
 	width:120%;
 	min-width:calc(25% - 15px);
-	padding: 30px;
+	padding: 20px, 20px;
 
+}
+
+.chart-row2 .chart2 {
+	width:120%;
+	min-width:calc(25% - 15px);
+	padding: 20px, 20px;
 }
 
 p.chart-source {
@@ -177,7 +185,7 @@ p.chart-source {
 }
 
 .chart2 img {
-	width:110%;
+	width:90%;
 }
 
 
