--- a/D3-portfolio/src/index.hbs
+++ b/D3-portfolio/src/index.hbs
@@ -43,8 +43,12 @@ analytics": ""
     3. Move the exported images to the images folder
     4. Include the partial normally like below
   -->
+{{!-- 
+{{> story/templates }}
+{{> story/slope-graph }}
+{{> story/airline-delays }} --}}
 
-{{!-- {{> story/templates }} --}}
+
 
 <!--
   You can also put the actual HTML here if you really want to,
